--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@ function loadPC(flipbook){
 
 	});
 
+	$(".next-button").addClass("button-pc");
+	$(".previous-button").addClass("button-pc");
+
 }
 
 function loadPhone(flipbook){
@@ -267,6 +270,9 @@ function loadPhone(flipbook){
 			}
 
 	});
+
+	$(".next-button").addClass("button-phone");
+	$(".previous-button").addClass("button-phone");
 
 	$('.magazine').css('overflow', 'visible');
 
