--- a/index.html
+++ b/index.html
@@ -185,11 +185,11 @@ function loadPhone(flipbook){
 			
 			// Magazine width
 
-			width: 800,
+			width: 1000,
 
 			// Magazine height
 
-			height: 1148,
+			height: 1435,
 
 			// Duration in millisecond
 
@@ -293,7 +293,7 @@ function loadApp() {
 	
 	//判斷是電腦還是手機
 	//電腦
-	if(check()){
+	if(false){
 		loadPC(flipbook);
 	}
 	//手機
